fix more spacing bugs and improve responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,18 @@
 body {
     box-sizing: border-box;
     height: 100%;
+    width: 100%;
 }
 
 .App {
     min-height: 100vh;
+    width: 100%;
     position: relative;
     background-color: #76c4db;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
 }
 
 
